- Updated to the new tModLoader monthly build