@@ -1,1 +1,2 @@
-- Updated to the new tModLoader monthly build
+- Fixed "Lothor the Wild is no longer after you..." issue Boss Checklist in multiplayer.
+- Fixed "Index is out of bounds of the array" upon entering the Backwoods in multiplayer.
